<resources>
    <string name="app_name">Note4YouFirebase</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="prompt_msg1">Email</string>
    <string name="search_bar">Search</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password( 8 – 15 characters) should not contain your name ,must contain at least 2 Uppercase Characters,2 digits and 1 special character </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="sample_message1">Title</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="add_title">Add Title</string>
    <string name="add_desccription">Add Desccription</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>

    <string name="save">Save</string>
    <string name="add_new_note">Add New Note</string>
    <string name="description">Description</string>
    <string name="floating_button_to_add">floating button to add</string>
    <string name="nothing">nothing</string>

    <string name="string_date" />


    <string name="pages_1">|  pages:1  |</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>
