<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singleDisplaynameContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_list"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/display_title_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/sample_message1"
        android:textColor="@android:color/primary_text_light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_list"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/display_description_list"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/description"
        android:textColor="#808080"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/display_title_list"
        app:layout_constraintTop_toBottomOf="@+id/display_title_list" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/display_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_list"
        app:layout_constraintTop_toBottomOf="@+id/display_description_list"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/display_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/time"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/display_date"
        app:layout_constraintTop_toBottomOf="@+id/display_date"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/display_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pages_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toEndOf="@+id/display_time"
        app:layout_constraintTop_toBottomOf="@+id/display_date" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/display_pages"
        app:layout_constraintTop_toTopOf="@+id/display_pages"
        app:srcCompat="@drawable/cloud_connected" />


</androidx.constraintlayout.widget.ConstraintLayout>