<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_purple"
    android:fitsSystemWindows="true"

    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.HrishikeshPujari.Note4you.DetailViewActivity">


    <RelativeLayout
        android:id="@+id/singleDisplaynameContainer_mainchat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/display_image"
        android:background="#BEBEBE"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/display_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/sample_message1"
            android:textColor="@android:color/primary_text_light"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="366dp"
        android:layout_height="610dp"

        app:layout_constraintBottom_toTopOf="@+id/listFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleDisplaynameContainer_mainchat">

        <ImageView
            android:id="@+id/display_image"
            android:layout_width="296dp"
            android:layout_height="404dp"

            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/add_image" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/listFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFB347"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/display_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/description"
            android:textColor="#222222"
            android:textSize="25sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
